--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ section{
 	font-variant: small-caps;
 	text-transform: uppercase;
 	font-size:25px;
+	padding-top:10px;
 	color:#fff;
 }
 .venue{
